Bug 1799216 - Keep clip chain id in sync when switching items that affect clip positioning. r=gfx-reviewers,gw

Bug 1661147 made us correctly inherit the clip chain. We do fix up the
scroll id etc before pushing a new ASR override etc, but we didn't fix
up the clip chain ID.

Differential Revision: https://phabricator.services.mozilla.com/D161382