gfx/layers/wr/ClipManager.h
@@ -119,11 +119,13 @@ class ClipManager {
   // This holds some clip state for a single nsDisplayItem
   struct ItemClips {
     ItemClips(const ActiveScrolledRoot* aASR,
-              const DisplayItemClipChain* aChain, bool aSeparateLeaf);
+              const DisplayItemClipChain* aChain, int32_t aAppUnitsPerDevPixel,
+              bool aSeparateLeaf);
 
     // These are the "inputs" - they come from the nsDisplayItem
     const ActiveScrolledRoot* mASR;
     const DisplayItemClipChain* mChain;
+    int32_t mAppUnitsPerDevPixel;
     bool mSeparateLeaf;
 
     // These are the "outputs" - they are pushed to WR as needed
